# LabAssemblerProject

./: CMakeLists.txt  Makefile  README.txt  input.as  libraries.h  linked_list.c  linked_list.h  main.c  main.h  root.h  test.c
assembly/: CMakeLists.txt  assembly.c  assembly.h  data.c  instruction.c  label.c  phase1.c  phase1.h  phase2.c  phase2.h
assembly/phase1/: label.c  phase1.c  phase1.h
cell/: cell.c  cell.h
directive/: directive.c  directive.h  word.c  word.h
libs/: data_types.h  datatypes.h  libs.h
libs/data/: data.c  data.h
libs/instruction/: instruction.c  instruction.h
libs/io/: io.c  io.h
libs/label/: label.c  label.h
libs/linkedlist/: linked_list.c  linked_list.h
libs/macro/: macro.c  macro.h
pre/: CMakeLists.txt  mcr.c  pre.c  pre.h
preassembler/: mcr.c  preassemble.c  preassemble.h
src/: CMakeLists.txt  Makefile  input.txt  libraries.h  main.c  main.h  mcr.c  preassemble.c  preassemble.h  root.h
src/assembly/: assembly.c  assembly.h  phase1.c  phase2.c
src/libs/: data_types.h  libs.h
src/libs/data/: data.c  data.h
src/libs/instruction/: instruction.c  instruction.h
src/libs/io/: io.c  io.h
src/libs/label/: label.c  label.h
src/libs/linkedlist/: linked_list.c  linked_list.h
src/libs/macro/: macro.c  macro.h
src/main/: main.c  main.h  test.c
src/pre/: pre.c  pre.h
