#add_library(assembly "" )
#
#target_sources(assembly PUBLIC
#        ../libs/label/label.c
#        ${CMAKE_CURRENT_SOURCE_DIR}/assembly.h
#        ${CMAKE_CURRENT_SOURCE_DIR}/assembly.c
#        ${CMAKE_CURRENT_SOURCE_DIR}/phase1.c
#        ${CMAKE_CURRENT_SOURCE_DIR}/phase1.h
#        ${CMAKE_CURRENT_SOURCE_DIR}/phase2.c
#        ../libs/data/data.c
#        ../libs/instruction/instruction.c
#        )
#
#target_include_directories(assembly PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})